Format according to google intellij codestyle Change various formats to use streams Change some string functions Apply various intellij code suggestions